--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <ul>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="#services">TailoredEdTEch</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -216,55 +217,7 @@
 
       </div>
     </section><!-- End Steps Section -->
-
-    <!-- --- Services Section --- -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Additional Services</h2>
-          <p>Cyclone is a TailorededTech app. The TailoredEdTech team team would love to help you solve any Google Workspace-related problem. Let us know how we can help!</p>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Automated Forms</a></h4>
-              <p class="description">Move and transform data from Forms to Docs, GMail, or Drive.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sheets Automation</a></h4>
-              <p class="description">Eliminate hours of copy+paste by integrating Sheets with Forms, Docs, Gmail, Slides, or Drive.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Minimester Scheduling</a></h4>
-              <p class="description">Help automate mimimester course selection and scheduling.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Customized Docs</a></h4>
-              <p class="description">Generate customized Docs, Slides, Sheets, GMail, Forms, .pdf, and more!</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
-
-    <!-- --- Frequently Asked Questions Section --- -->
+<!-- --- Frequently Asked Questions Section --- -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
 
@@ -332,6 +285,52 @@
 
       </div>
     </section><!-- End Frequently Asked Questions Section -->
+    <!-- --- Services Section --- -->
+    <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>TailoredEdTech - Additional Services</h2>
+          <p>Cyclone is a TailorededTech solution The TailoredEdTech team team would love to help you solve any Google Workspace-related problem. Let us know how we can help!</p>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <h4 class="title"><a href="">Automated Forms</a></h4>
+              <p class="description">Move and transform data from Forms to Docs, GMail, or Drive.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Sheets Automation</a></h4>
+              <p class="description">Eliminate hours of copy+paste by integrating Sheets with Forms, Docs, Gmail, Slides, or Drive.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <h4 class="title"><a href="">Minimester Scheduling</a></h4>
+              <p class="description">Help automate mimimester course selection and scheduling.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-layer"></i></div>
+              <h4 class="title"><a href="">Customized Docs</a></h4>
+              <p class="description">Generate customized Docs, Slides, Sheets, GMail, Forms, .pdf, and more!</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
 
   </main><!-- End #main -->
 
