--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
-      <h1>Manage cycle-based repeating events in Google Calendar. </h1>
-      <h2>Easily make events repeat according to your school or organizations cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
+      <h1>Manage repeating, cycle-based events in Google Calendar. </h1>
+      <h2>Easily create and delete repeating events according to your school or organizations cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
       <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
       <a href="#about" class="btn-get-started scrollto">Get More Information Now</a>
 
@@ -72,7 +72,7 @@
             <div class="content">
               <h3>Operating on a 6, 7, or 10 day cycle offers schools many benefits. Calendar managment isn’t one of them. </h3>
               <p>
-                Google Calendar only makes it easy to schedule events that repeat on a Monday - Friday schedule. Working with a different rotation of events makes it tough to schedule.             
+                Schedule events that repeat on a Monday - Friday schedule is easy in Google Calendar. Working with different rules for rotating events can make scheduling Calendar meetings a nightmare.             
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
@@ -120,7 +120,7 @@
             <img src="assets/img/Scheduling.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
-            <h3>Fast, Easy, and Accurate Scheduling</h3>
+            <h3>Easy Scheduling</h3>
             <p class="fst-italic">
               Add and Delete recurring events with 1-click on any cycle/schedule pattern.
             </p>
@@ -128,9 +128,7 @@
               <li><i class="bi bi-check"></i> <b>Cyclone Lives in Google Calendar.</b> A simple interface is accessible from the Google Calendar sidebar. No .ics files, no uploading, no emails, no scheduling dozens of individual events.</li>
               <li><i class="bi bi-check"></i> <b>One-click option for adding and deleting recurring events.</b> Once users click an event, a single button creates repeating events through the end of the school year, or some other specified timeframe.  Deleting connected recurring events is just as easy.</li>
               <li><i class="bi bi-check"></i> <b>Schedule recurring events for other people</b> Administrative assistants can add recurring cycle-based events for other people by easily selecting a shared calendar.</li>
-              <li><i class="bi bi-check"></i> <b>Daylight Savings and Time-Zone Aware. </b>  Events are scheduled with an awareness of time-zone specific patterns, including daylight savings.</li>
               <li><i class="bi bi-check"></i> <b>School-day only scheduling.</b> Recurring events can repeat every cycle, or every other cycle. Also supports scheduing recurring school day events on a weekly schedule, but only on school days so that recurring events won't be created during breaks or on other non-school days.</li>
-              <li><i class="bi bi-check"></i> <b>Optimized for speed.</b> User actions are performed quickly because Calendar operations are optimized on the backend to minimize calls to Google's services.</li>
             </ul>
           </div>
         </div>
@@ -164,6 +162,8 @@
             <ul>
               <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Simply select an existing cycle calendar to provide a pattern for recurring day labels. 6-day, 7-day, 10-day cycles? No problem. </li>
               <li><i class="bi bi-check"></i> <b>Workspace ready. </b> Google Workspace Admins can quickly preconfigure a cycle calendar for all workspace users.</li>
+              <li><i class="bi bi-check"></i> <b>Daylight Savings and Time-Zone Aware. </b>  Events are scheduled with an awareness of time-zone specific patterns, including daylight savings.</li>
+              <li><i class="bi bi-check"></i> <b>Optimized for speed.</b> User actions are performed quickly because Calendar operations are optimized on the backend to minimize calls to Google's services.</li>
               <li><i class="bi bi-check"></i> <b>Accommodates your unique needs. </b> Let us know what would help make Cyclone work better for your organization!</li>
             </ul>
           </div>
