--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <img src="assets/img/Scheduling.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
-            <h3>Easy Scheduling</h3>
+            <h3>Easy Calendar Events</h3>
             <p class="fst-italic">
               Add and Delete recurring events with 1-click on any cycle/schedule pattern.
             </p>
@@ -155,7 +155,7 @@
             <img src="assets/img/Configuration.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
-            <h3>Easy Configuration.</h3>
+            <h3>Simple Configuration.</h3>
             <p class="fst-italic">
               Setting up Cylcone for your Google Worspace is painless and hassle-free.
             </p>
