--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>Simple Configuration.</h3>
             <p class="fst-italic">
-              Setting up Cylcone for your Google Worspace is painless and hassle-free.
+              Setting up Cylcone for your Google Workspace is painless and hassle-free.
             </p>
             <ul>
               <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Simply select an existing cycle calendar to provide a pattern for recurring day labels. 6-day, 7-day, 10-day cycles? No problem. </li>
