Text update/FAQ start

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1>Manage repeating, cycle-based events in Google Calendar. </h1>
-      <h2>Easily create and delete repeating events according to your school or organizations cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
+      <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
       <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
       <a href="#about" class="btn-get-started scrollto">Get More Information Now</a>
 
@@ -70,9 +70,9 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
             <div class="content">
-              <h3>Operating on a 6, 7, or 10 day cycle offers schools many benefits. Calendar managment isn’t one of them. </h3>
+              <h3>Operating on a 6, 7, or 10 day calendar cycle can offer many benefits. Calendar managment isn’t one of them. </h3>
               <p>
-                Schedule events that repeat on a Monday - Friday schedule is easy in Google Calendar. Working with different rules for rotating events can make scheduling Calendar meetings a nightmare.             
+                Google Calendar is designed to help you manage events that repeat on a Monday - Friday schedule. Working with different rules for recurring events can make scheduling repeating meetings with Google Calendar a nightmare.             
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
@@ -81,22 +81,22 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
                   <h4>Increased Overhead</h4>
-                  <p>Scheduling repeating events individually wastes a lot of time that could be better spent on other things</p>
+                  <p>Individually scheduling repeating events wastes a lot of time that could be better spent on other things. If things change, individually deleting connected events can be an even more time-consuming (and error-prone) task.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Managing Multiple Calendars</h4>
-                  <p>Administrative assistants can have a lot of trouble scheduling meetings for multiple people</p>
+                  <h4>Juggling Multiple Calendars</h4>
+                  <p>Administrative assistants and other calendar-inensive roles can have a lot of trouble scheduling recurring meetings for multiple people.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Class Analytics</h4>
-                  <p>It’s hard to figure out how many class meetings you have, or the total time you have with each class in a marking period.</p>
+                  <h4>Muddy Meeting Analytics</h4>
+                  <p>How many times does each recurring event meet? What's the total time you'll spend in each event? It’s hard to answer even the most basic questions related to repeated events.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Coordinating Classes</h4>
-                  <p>Aligning parallel sections of a class is a complex task when you can’t easily figure out when each class section is going to meet.</p>
+                  <h4>Ghost Meeting Dissonance</h4>
+                  <p>Naive repetition of recurring events will populate an event on a Google Calendar even when your organization has a holiday. This populates a calendar with "ghost" events that should not have been scheduled in the first place.</p>
                 </div>
               </div>
             </div>
@@ -112,7 +112,7 @@
 
         <div class="section-title">
           <h2>Cyclone Features</h2>
-          <p>Cyclone is Workspace Add-on for Google Calendar makes it easy to schedule and analyze events, even events that repeat outside of a Monday - Friday pattern.</p>
+          <p>Cyclone is Workspace Add-on for Google Calendar that makes it easy to schedule and analyze events that repeat outside of a regular Monday - Friday pattern.</p>
         </div>
 
         <div class="row content">
@@ -120,15 +120,15 @@
             <img src="assets/img/Scheduling.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
-            <h3>Easy Calendar Events</h3>
+            <h3>Easy Calendar Event Management</h3>
             <p class="fst-italic">
               Add and Delete recurring events with 1-click on any cycle/schedule pattern.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> <b>Cyclone Lives in Google Calendar.</b> A simple interface is accessible from the Google Calendar sidebar. No .ics files, no uploading, no emails, no scheduling dozens of individual events.</li>
-              <li><i class="bi bi-check"></i> <b>One-click option for adding and deleting recurring events.</b> Once users click an event, a single button creates repeating events through the end of the school year, or some other specified timeframe.  Deleting connected recurring events is just as easy.</li>
-              <li><i class="bi bi-check"></i> <b>Schedule recurring events for other people</b> Administrative assistants can add recurring cycle-based events for other people by easily selecting a shared calendar.</li>
-              <li><i class="bi bi-check"></i> <b>School-day only scheduling.</b> Recurring events can repeat every cycle, or every other cycle. Also supports scheduing recurring school day events on a weekly schedule, but only on school days so that recurring events won't be created during breaks or on other non-school days.</li>
+              <li><i class="bi bi-check"></i> <b>Cyclone Lives in Google Calendar.</b> A simple interface is accessible from the Google Calendar sidebar. No uploading .ics files, and no scheduling of dozens of individual events.</li>
+              <li><i class="bi bi-check"></i> <b>One-click option for adding and deleting recurring events.</b> A single button creates repeating events through a specified timeframe.  Deleting connected recurring events is just as easy.</li>
+              <li><i class="bi bi-check"></i> <b>Schedule recurring events for other people.</b> Users can add/delete recurring cycle-based events for any Calendar with edit privileges.</li>
+              <li><i class="bi bi-check"></i> <b>No holiday scheduling.</b> Recurring events can be scheduled to repeat every cycle, every other cycle, or on a Mon-Fri schedule that skips holidays or other days with special schedules.</li>
             </ul>
           </div>
         </div>
@@ -138,14 +138,14 @@
             <img src="assets/img/Planning.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-            <h3>Convenient Planning</h3>
+            <h3>Convenient Planning with Almanac (Coming Soon)</h3>
             <p class="fst-italic">
               View nuanced meeting statistics and genrate printable, customizable planners to help everyone understand their schedule.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> <b>Helpful analytics.</b> Precalculated statistics like total meeting time, total number of meetings, and sequential event numbering. </li>
-              <li><i class="bi bi-check"></i> <b>Customizable planner options.</b> Planners are generated using Google Sheets, so customizing event names and print formats is easy. </li>
-              <li><i class="bi bi-check"></i> <b>Easily setup unique colors in one Google Calendar.</b> Specify a unique color for recurring each meeting group to help you quickly understand the nature of the meeting.</li>
+              <li><i class="bi bi-check"></i> <b>Helpful planning analytics.</b> Precalculated statistics like total meeting time, total number of meetings, and sequential event numbering. </li>
+              <li><i class="bi bi-check"></i> <b>Customizable planner options.</b> Planners are generated in Google Sheets, so customizing event names and style options is easy and familiar. </li>
+              <li><i class="bi bi-check"></i> <b>Unique colors in one Google Calendar.</b> Specify a unique color for a recurring meeting group to help you quickly understand the nature of a meeting.</li>
             </ul>
           </div>
         </div>
@@ -157,14 +157,13 @@
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>Simple Configuration.</h3>
             <p class="fst-italic">
-              Setting up Cylcone for your Google Workspace is painless and hassle-free.
+              Set up Cylcone for your Google Workspace with minimal administrative involvement.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Simply select an existing cycle calendar to provide a pattern for recurring day labels. 6-day, 7-day, 10-day cycles? No problem. </li>
-              <li><i class="bi bi-check"></i> <b>Workspace ready. </b> Google Workspace Admins can quickly preconfigure a cycle calendar for all workspace users.</li>
+              <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Select an existing cycle calendar to provide a pattern for recurring day labels. Or, configure a spreadsheet with a more nuanced, multi-divisional calendar. 6-day, 7-day, 10-day cycles? No problem. </li>
+              <li><i class="bi bi-check"></i> <b>Workspace ready. </b> Google Workspace Admins can quickly deploy Cyclone for all Workspace users.</li>
               <li><i class="bi bi-check"></i> <b>Daylight Savings and Time-Zone Aware. </b>  Events are scheduled with an awareness of time-zone specific patterns, including daylight savings.</li>
               <li><i class="bi bi-check"></i> <b>Optimized for speed.</b> User actions are performed quickly because Calendar operations are optimized on the backend to minimize calls to Google's services.</li>
-              <li><i class="bi bi-check"></i> <b>Accommodates your unique needs. </b> Let us know what would help make Cyclone work better for your organization!</li>
             </ul>
           </div>
         </div>
@@ -182,16 +181,22 @@
         <ul class="faq-list">
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">How do I schedule a recurring event? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                <ol>
+                  <li>Open Cyclone by clicking on the icon on Google Calendar Toolbar.</li>
+                  <li>Click on an event that you would like to repeat.</li>
+                  <li>Select the Calendar you would like to use to repeat the event (if necessary).</li>
+                  <li>Select the last day the event should repeat (if necessary).</li>
+                  <li>Click Repeat Event.</li>
+                </ol>
               </p>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">How do I delete a recurring event? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -200,7 +205,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">How do I make sure my recurring event moves with a rotating period? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
@@ -209,28 +214,18 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Can I schedule a recuring event where I'm Free? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
               </p>
             </div>
           </li>
-
           <li>
-            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">How do I generate a prinatable planner? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                Cyclone Almanac allows you to quickly generate a printable planner with any collection of events from your Google Calendar. This Cyclone feature is coming soon!
               </p>
             </div>
           </li>
@@ -244,8 +239,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>TailoredEdTech - Additional Services</h2>
-          <p>Cyclone is a TailorededTech solution The TailoredEdTech team team would love to help you solve any Google Workspace-related problem. Let us know how we can help!</p>
+          <h2>TailoredEdTech</h2>
+          <p>Cyclone is a TailorededTech solution. The TailoredEdTech team team would love to help you make Cyclone work better for your organization. We can also help you solve any Google Workspace-related problem. Let us know how we can help!</p>
         </div>
 
         <div class="row">
@@ -260,7 +255,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sheets Automation</a></h4>
+              <h4 class="title"><a href="">Dynamic, Intelligent Sheets</a></h4>
               <p class="description">Eliminate hours of copy+paste by integrating Sheets with Forms, Docs, Gmail, Slides, or Drive.</p>
             </div>
           </div>
@@ -276,7 +271,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Customized Docs</a></h4>
+              <h4 class="title"><a href="">Customized Doc Generation</a></h4>
               <p class="description">Generate customized Docs, Slides, Sheets, GMail, Forms, .pdf, and more!</p>
             </div>
           </div>
