Tweaked marketing text

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="content">
               <h3>Operating on a 6, 7, or 10 day calendar cycle can offer many benefits. Calendar managment isn’t one of them. </h3>
               <p>
-                Google Calendar is designed to help you manage events that repeat on a Monday - Friday schedule. Working with different rules for recurring events can make scheduling repeating meetings with Google Calendar a nightmare.             
+                Google Calendar is designed to help you manage events that repeat on a Monday - Friday schedule. If you're working with different rules for recurring events, scheduling meetings with Google Calendar can be a nightmare.             
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
@@ -90,12 +90,12 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Muddy Meeting Analytics</h4>
+                  <h4>Muddy Analytics</h4>
                   <p>How many times does each recurring event meet? What's the total time you'll spend in each event? It’s hard to answer even the most basic questions related to repeated events.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Ghost Meeting Dissonance</h4>
+                  <h4>Ghost Meetings</h4>
                   <p>Naive repetition of recurring events will populate an event on a Google Calendar even when your organization has a holiday. This populates a calendar with "ghost" events that should not have been scheduled in the first place.</p>
                 </div>
               </div>
@@ -339,7 +339,7 @@
 
         <div class="section-title">
           <h2>TailoredEdTech</h2>
-          <p>Cyclone is a TailorededTech solution. The TailoredEdTech team team would love to help you make Cyclone work better for your organization. We can also help you solve any Google Workspace-related problem. Let us know how we can help!</p>
+          <p>Cyclone is a TailorededTech solution for making it easier to manage bespoke, cycle-based schedules in Google Calendar. If you think we can make Cyclone work better for your organization, let us know! We'd also love to hear about any of your other Google Workspace-related problems. Let us know how we can help!</p>
         </div>
 
         <div class="row">
