--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">How do I delete an event I created with Cyclone? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">How do I delete a Cyclone-created event? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
                You can delete a recurring event created by Cyclone through the standard Google Calendar event deletion process. <br> <br>
