--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
             <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Can I schedule a recuring event where I'm Free? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Cyclone will preserve all event settings for the events that are created for a recurring event. If the event you've selected to repeat is 
-                a Free event, all recurring events will also be Free.
+                Cyclone will preserve all event settings for the events that are created for a recurring event. If the event you'd like to repeat is 
+                Free, all recurring events will also be Free.
                </p>
             </div>
           </li>
