--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="#faq">How-To/FAQ</a></li>
+          <li><a class="nav-link scrollto" href="how_to.html">How-To/FAQ</a></li>
           <li><a class="nav-link scrollto" href="#services">TailoredEdTEch</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
@@ -170,169 +170,6 @@
       </div>
     </section><!-- End Product Features Section -->
 
-<!-- --- Frequently Asked Questions Section --- -->
-    <section id="faq" class="faq">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
-        </div>
-
-        <ul class="faq-list">
-
-          <li>
-            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">How do I schedule a repeating event with Cyclone? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq1" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                <ol>
-                  <li>Open Cyclone by using the Google Calendar Toolbar to click on the Cyclone icon.<br>
-                    <img src="assets/img/HowTo/Add_1.png" width="50%"/> 
-                  </li>
-                  <li>Click on the event you'd like to repeat.<br>
-                    <img src="assets/img/HowTo/Add_2.png" width="50%"/> 
-                  </li>
-                  <li>A card will appear for you to specify a few options for repeating the event.<br>
-                    <img src="assets/img/HowTo/Add_3.png" width="50%"/> 
-                  </li>
-                  <li>Select a schedule to define cycle days, special days, and holidays for the repeating event. <br>
-                    <img src="assets/img/HowTo/Add_4.png" width="50%"/> <br>
-                      Events will not repeat on special days or holidays. 
-                  </li>
-                  <li>Select a pattern for the repeating event. <br>
-                    <img src="assets/img/HowTo/Add_5.png" width="50%"/> <br>
-                      Events will not repeat on special days or holidays. 
-                  </li>
-                  <li>Select the last day the event should repeat.<br>
-                    <img src="assets/img/HowTo/Add_6.png" width="50%"/> 
-                  </li>
-                  <li>Click Repeat Event.<br>
-                    <img src="assets/img/HowTo/Add_7.png" width="50%"/> <br>
-                     A confirmation message should appear once the recurring events have been added to your Calendar.<br><br>
-                     You may have to refresh your web browser to see the newly populated events:<br>
-                    <img src="assets/img/HowTo/Add_8a.png" width="25%"/> 
-                    <img src="assets/img/HowTo/Add_8b.png" width="25%"/> 
-                    <img src="assets/img/HowTo/Add_8c.png" width="25%"/>
-
-                  </li>
-                </ol>
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">How do I delete a Cyclone-created event? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-              <p>
-               You can delete a recurring event created by Cyclone through the standard Google Calendar event deletion process. <br> <br>
-               <ol>
-               <li>Click on the event you'd like to delete.<br>
-                <img src="assets/img/HowTo/Delete_1.png" width="50%"/> 
-              </li>
-              <li>Click on the trashcan icon.<br>
-                <img src="assets/img/HowTo/Delete_2.png" width="50%"/> 
-              </li>
-              <li>Specify whether you'd like to delete the single event, the event and all following connected events, or all connected events both before and after this event.<br>
-                <img src="assets/img/HowTo/Delete_3.png" width="50%"/> 
-              </li>
-              <li>Click OK.<br>
-                <img src="assets/img/HowTo/Delete_4.png" width="50%"/> <br>
-                The event(s) will be removed from your calendar.
-              </li>
-            </ol>
-               </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">How do I make sure my recurring event moves with a rotating period? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Some schedules have rotating periods. For instance, your schedule may have a 6th period that meets in the afternoon on Mondays, Tuesdays, and Thursdays, but
-                rotates to meet in the morning on Wednesdays and Fridays to accommodate student early dismissals for Athletics. <br><br>
-                Cyclone will prompt you for your intentions if you attempt to repeat an event that overlaps with either the morning or afternoon ocurrence of such a rotation.<br><br>
-                <ol>
-                  <li>Open Cyclone and click on an event to repeat.<br>
-                      <img src="assets/img/HowTo/Rotate_1.png" width="50%"/><br>
-                 </li>
-                 <li>If Cyclone detects that your event overlaps with a rotating period you'll be prompted to clarify how you'd like your event to accommodate this rule.<br>
-                  <img src="assets/img/HowTo/Rotate_2.png" width="50%"/><br>
-                 </li>
-                 <li>If your event should ignore the rotating period and repeat at the same time every cycle day, deselect the option to repeat with the period label.<br>
-                  <img src="assets/img/HowTo/Rotate_3.png" width="50%"/><br>
-                 </li>
-                 <li>If the meeting time of your repeating event should move with the period label, indicate which portion of the period should be occupied by your event.<br>
-                  <img src="assets/img/HowTo/Rotate_4.png" width="50%"/><br>
-                 </li>
-                 <li>Click Repeat Event.<br>
-                  Your event should populate correctly on according to the specified period rotation pattern.<br>
-                  <img src="assets/img/HowTo/Rotate_5a.png" width="20%"/>                 
-                  <img src="assets/img/HowTo/Rotate_5b.png" width="20%"/>
-                  <img src="assets/img/HowTo/Rotate_5c.png" width="20%"/>
-                  <img src="assets/img/HowTo/Rotate_5d.png" width="20%"/>
-                 </li>
-                 <li>Cyclone will offer a prompt on either side of the rotating period.<br>
-                  <img src="assets/img/HowTo/Rotate_6.png" width="50%"/><br>
-                  For instance, in this scenario the selected event overlaps with a time that would typically hold a rotating 6th period.<br><br>
-                  Cyclone detects this and offers an option to specify how the period rotation should be handled.
-                 </li>
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Can I schedule a recuring event where I'm Free? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Cyclone will preserve all event settings for the events that are created for a recurring event. If the event you'd like to repeat is 
-                Free, all recurring events will also be Free.
-               </p>
-            </div>
-          </li>
-          <li>
-            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">How do I generate a printable planner? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Cyclone Almanac allows you to quickly generate a printable planner with any collection of events from your Google Calendar. This Cyclone feature is coming soon!
-              </p>
-            </div>
-          </li>
-          <li>
-            <div data-bs-toggle="collapse" href="#faq7" class="collapsed question">How does a Workspace Admin configure a recurring schedule? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq7" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                After installing Cyclone as a Workspace Add-On, configuring a unique cycle-based schedule is a quick and painless process. 
-                <br> <br>
-                For organizations with multiple calendars (like schools with multiple divisions), a Google Workspace Admin can repeat this process for each unique cycle schedule.  <br><br>
-                <ol>
-                  <li>The Google Workspace Admin for your organization should visit their Cyclone Configuration Web Interface, then select a Google Calendar to define a cycle schedule.<br>
-                      <img src="assets/img/HowTo/Admin_1.png" width="50%"/><br>
-                      Cycle days are defined by Google Calendars with All-Day events to match a particular cycle label. <br>
-                      <img src="assets/img/HowTo/Admin_1b.png" width="50%"/><br>
-                 </li>
-                  <li>Cyclone will pre-populate calendar start date, end date, cycle labels, and non-cycle labels.<br>
-                    <img src="assets/img/HowTo/Admin_2.png" width="50%"/>
-                  </li>
-                  <li>Add/delete cycle labels and non-cycle labels as needed.<br>
-                      <img src="assets/img/HowTo/Admin_3.png" width="50%"/>
-                  </li>
-                  <li>Indicate your time zone, and select optional rotating meeting configurations, then click Submit.<br>
-                      <img src="assets/img/HowTo/Admin_4.png" width="50%"/> 
-                  </li>
-                  <li>Use the color-coded feedback to verify your cycle schedule is correct.<br>
-                    <img src="assets/img/HowTo/Admin_5.png" width="50%"/> 
-                  </li>
-                  <li>All workspace users can now select this schedule as an option for repeating events.<br>
-                    <img src="assets/img/HowTo/Admin_6.png" width="75%"/> 
-                  </li>
-                </ol>             
-               </p>
-            </div>
-          </li>
-
-        </ul>
-
-      </div>
-    </section><!-- End Frequently Asked Questions Section -->
     <!-- --- Services Section --- -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
