--- a/how_to.html
+++ b/how_to.html
@@ -67,30 +67,32 @@
             <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">How do I schedule a repeating event with Cyclone? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
+                Events can be repeated on any Calendar for which you have edit privledges.
+                Repeating events will populate in the Calendar which contains the selected event.<br><br>
                 <ol>
-                  <li>Open Cyclone by using the Google Calendar Toolbar to click on the Cyclone icon.<br>
+                  <li> <span class="how_to_step">Open Cyclone by using the Google Calendar Toolbar to click on the Cyclone icon.</span><br>
                     <img src="assets/img/HowTo/Add_1.png" width="50%"/> 
                   </li>
-                  <li>Click on the event you'd like to repeat.<br>
+                  <li><span class="how_to_step">Click on the event you'd like to repeat.</span><br>
                     <img src="assets/img/HowTo/Add_2.png" width="50%"/> 
                   </li>
-                  <li>A card will appear for you to specify a few options for repeating the event.<br>
+                  <li><span class="how_to_step">A card will appear with options for repeating the event.</span><br>
                     <img src="assets/img/HowTo/Add_3.png" width="50%"/> 
                   </li>
-                  <li>Select a schedule to define cycle days, special days, and holidays for the repeating event. <br>
+                  <li><span class="how_to_step">Select a schedule to define cycle days, special days, and holidays for the repeating event.</span> <br>
                     <img src="assets/img/HowTo/Add_4.png" width="50%"/> <br>
-                      Events will not repeat on special days or holidays. 
                   </li>
-                  <li>Select a pattern for the repeating event. <br>
+                  <li><span class="how_to_step">Select a pattern for the repeating event.</span> <br>
                     <img src="assets/img/HowTo/Add_5.png" width="50%"/> <br>
-                      Events will not repeat on special days or holidays. 
+                      Events will not repeat on special days or holidays.
                   </li>
-                  <li>Select the last day the event should repeat.<br>
-                    <img src="assets/img/HowTo/Add_6.png" width="50%"/> 
+                  <li><span class="how_to_step">Select the last day the event should repeat.</span><br>
+                    <img src="assets/img/HowTo/Add_6.png" width="50%"/> <br>
+                      Repeating events can only be scheduled within the timeframe specified by your selected schedule. 
                   </li>
-                  <li>Click Repeat Event.<br>
+                  <li><span class="how_to_step">Click "Repeat Event".</span><br>
                     <img src="assets/img/HowTo/Add_7.png" width="50%"/> <br>
-                     A confirmation message should appear once the recurring events have been added to your Calendar.<br><br>
+                     A confirmation message should appear once the recurring events have been added to your Calendar.
                      You may have to refresh your web browser to see the newly populated events:<br>
                     <img src="assets/img/HowTo/Add_8a.png" width="25%"/> 
                     <img src="assets/img/HowTo/Add_8b.png" width="25%"/> 
@@ -106,20 +108,20 @@
             <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">How do I delete a Cyclone-created event? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-               You can delete a recurring event created by Cyclone through the standard Google Calendar event deletion process. <br> <br>
+                Cyclone-created events can be deleted through the standard Google Calendar interface. <br> <br>
                <ol>
-               <li>Click on the event you'd like to delete.<br>
+               <li><span class="how_to_step">Click on the event you'd like to delete.</span><br>
                 <img src="assets/img/HowTo/Delete_1.png" width="50%"/> 
               </li>
-              <li>Click on the trashcan icon.<br>
+              <li><span class="how_to_step">Click on the trashcan icon.</span><br>
                 <img src="assets/img/HowTo/Delete_2.png" width="50%"/> 
               </li>
-              <li>Specify whether you'd like to delete the single event, the event and all following connected events, or all connected events both before and after this event.<br>
+              <li><span class="how_to_step">Specify whether you'd like to delete the single event, the event and all following connected events, or all connected events both before and after this event.</span><br>
                 <img src="assets/img/HowTo/Delete_3.png" width="50%"/> 
               </li>
-              <li>Click OK.<br>
+              <li><span class="how_to_step">Click "OK".</span><br>
                 <img src="assets/img/HowTo/Delete_4.png" width="50%"/> <br>
-                The event(s) will be removed from your calendar.
+                All connected event(s) will be removed from your calendar.
               </li>
             </ol>
                </p>
@@ -134,36 +136,38 @@
                 rotates to meet in the morning on Wednesdays and Fridays to accommodate student early dismissals for Athletics. <br><br>
                 Cyclone will prompt you for your intentions if you attempt to repeat an event that overlaps with either the morning or afternoon ocurrence of such a rotation.<br><br>
                 <ol>
-                  <li>Open Cyclone and click on an event to repeat.<br>
+                  <li><span class="how_to_step">Open Cyclone, then click on an event to repeat.</span><br>
                       <img src="assets/img/HowTo/Rotate_1.png" width="50%"/><br>
                  </li>
-                 <li>If Cyclone detects that your event overlaps with a rotating period you'll be prompted to clarify how you'd like your event to accommodate this rule.<br>
+                 <li><span class="how_to_step">If the event overlaps with a rotating period extra propmpts appear to specify how to handle rotating period times.</span><br>
                   <img src="assets/img/HowTo/Rotate_2.png" width="50%"/><br>
+                  Cyclone will offer a prompt on either side of the rotating period:<br>
+                  <img src="assets/img/HowTo/Rotate_6.png" width="50%"/> <br>
                  </li>
-                 <li>If your event should ignore the rotating period and repeat at the same time every cycle day, deselect the option to repeat with the period label.<br>
+                 <li><span class="how_to_step">Deselect the option to repeat with period labels for events that should ignore rotating period times.</span><br>
                   <img src="assets/img/HowTo/Rotate_3.png" width="50%"/><br>
+                   This indicates that the event should repeat at the same time every cycle day, irregardless of the rotating period.
                  </li>
-                 <li>If the meeting time of your repeating event should move with the period label, indicate which portion of the period should be occupied by your event.<br>
+                 <li><span class="how_to_step">Events that move with a period label can specify new meeting times for the event.</span>.<br>
                   <img src="assets/img/HowTo/Rotate_4.png" width="50%"/><br>
+                  This indicates that an afternoon event will occur from 7:55am - 8:55am when the period rotates to the morning.
                  </li>
-                 <li>Click Repeat Event.<br>
-                  Your event should populate correctly on according to the specified period rotation pattern.<br>
+                 <li><span class="how_to_step">Click "Repeat Event".</span><br>
+                  Events populate on a Calendar according to the period rotation pattern specified by the selected schedule.<br>
                   <img src="assets/img/HowTo/Rotate_5a.png" width="20%"/>                 
                   <img src="assets/img/HowTo/Rotate_5b.png" width="20%"/>
                   <img src="assets/img/HowTo/Rotate_5c.png" width="20%"/>
-                  <img src="assets/img/HowTo/Rotate_5d.png" width="20%"/>
+                  <img src="assets/img/HowTo/Rotate_5d.png" width="20%"/><br>
+                  This schedule has a 6th period which meets in the afternoon on Mondays, Tuesdays, and Thursdays. 6th period
+                  rotates to meet in the morning on Wednesdays and Fridays in order to accommodate student early dismissals for Athletics.
                  </li>
-                 <li>Cyclone will offer a prompt on either side of the rotating period.<br>
-                  <img src="assets/img/HowTo/Rotate_6.png" width="50%"/><br>
-                  For instance, in this scenario the selected event overlaps with a time that would typically hold a rotating 6th period.<br><br>
-                  Cyclone detects this and offers an option to specify how the period rotation should be handled.
-                 </li>
+                 </ol>
               </p>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Can I schedule a recuring event where I'm Free? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Can I schedule a recurring event where I'm Free? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Cyclone will preserve all event settings for the events that are created for a recurring event. If the event you'd like to repeat is 
@@ -180,31 +184,31 @@
             </div>
           </li>
           <li>
-            <div data-bs-toggle="collapse" href="#faq7" class="collapsed question">How does a Workspace Admin configure a recurring schedule? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq7" class="collapsed question">How does a Google Workspace Admin configure a cycle-based schedule for Cyclone? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq7" class="collapse" data-bs-parent=".faq-list">
               <p>
-                After installing Cyclone as a Workspace Add-On, configuring a unique cycle-based schedule is a quick and painless process. 
+                After installing Cyclone as a Workspace Add-On, a Google Workspace Admin can configure a unique cycle-based schedule though an intuitive web interface. 
                 <br> <br>
-                For organizations with multiple calendars (like schools with multiple divisions), a Google Workspace Admin can repeat this process for each unique cycle schedule.  <br><br>
+                For organizations with multiple calendars (ie. schools with multiple divisions), this process is repeated for each unique cycle schedule.  <br><br>
                 <ol>
-                  <li>The Google Workspace Admin for your organization should visit their Cyclone Configuration Web Interface, then select a Google Calendar to define a cycle schedule.<br>
+                  <li><span class="how_to_step">Visit the Cyclone Configuration Web Interface, then select a Google Calendar to define a cycle schedule.</span><br>
                       <img src="assets/img/HowTo/Admin_1.png" width="50%"/><br>
                       Cycle days are defined by Google Calendars with All-Day events to match a particular cycle label. <br>
                       <img src="assets/img/HowTo/Admin_1b.png" width="50%"/><br>
                  </li>
-                  <li>Cyclone will pre-populate calendar start date, end date, cycle labels, and non-cycle labels.<br>
+                  <li><span class="how_to_step">Cyclone will pre-populate calendar start date, end date, cycle labels, and non-cycle labels.</span><br>
                     <img src="assets/img/HowTo/Admin_2.png" width="50%"/>
                   </li>
-                  <li>Add/delete cycle labels and non-cycle labels as needed.<br>
+                  <li><span class="how_to_step">Add/delete cycle labels and non-cycle labels as needed.</span><br>
                       <img src="assets/img/HowTo/Admin_3.png" width="50%"/>
                   </li>
-                  <li>Indicate your time zone, and select optional rotating meeting configurations, then click Submit.<br>
+                  <li><span class="how_to_step">Indicate your time zone, and select optional rotating meeting configurations, then click "Submit"</span>.<br>
                       <img src="assets/img/HowTo/Admin_4.png" width="50%"/> 
                   </li>
-                  <li>Use the color-coded feedback to verify your cycle schedule is correct.<br>
+                  <li><span class="how_to_step">Use the color-coded feedback to verify your cycle schedule is correct.</span><br>
                     <img src="assets/img/HowTo/Admin_5.png" width="50%"/> 
                   </li>
-                  <li>All workspace users can now select this schedule as an option for repeating events.<br>
+                  <li><span class="how_to_step">All workspace users can now select this schedule as an option for repeating events.</span><br>
                     <img src="assets/img/HowTo/Admin_6.png" width="75%"/> 
                   </li>
                 </ol>             
